# synthetic-clrs

./: .gitignore  Makefile  README.md  make_dataset.py  pyproject.toml  requirements.txt
src/synthetic_clrs/: __init__.py  algorithms.py  problem_mappings.py
src/synthetic_clrs/generators/: __init__.py  divide_conquer_generator.py  dynamic_programming_generator.py  geometry_generator.py  graphs_generator.py  greedy_generator.py  problem_generator.py  search_generator.py  sorting_generator.py  strings_generator.py
src/synthetic_clrs/solvers/: __init__.py  divide_conquer_solver.py  dynamic_programming_solver.py  geometry_solver.py  graphs_solver.py  greedy_solver.py  problem_solver.py  search_solver.py  sorting_solver.py  strings_solver.py
src/synthetic_clrs/utils/: __init__.py  rng_utils.py
tests/: test_solvers.py
